--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.6.0
 Django==3.1.4
 django-allauth==0.44.0
 django-filter==2.4.0
+django-rest-auth==0.9.5
 django-taggit==1.3.0
 djangorestframework==3.12.2
 idna==2.10
