hopefully these down break things

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DBUSER= 'pass'
 DBPASS= 'ASLKQWPO1111%'
 DBHOST= 'localhost'
 PORT= '5432'
-ALLOWED_HOSTS=['52.156.119.131','zpdev.app','www.zpdev.app','*']
+ALLOWED_HOSTS=['localhost','zpdev.app','www.zpdev.app','*']
